# phpHerd

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: composer.rs  database.rs  dns.rs  dumps.rs  logs.rs  mail.rs  mod.rs  nginx.rs  node.rs  php.rs  services.rs  settings.rs  sites.rs  ssl.rs
src-tauri/src/core/: config.rs  dns_manager.rs  mod.rs  nginx_manager.rs  node_manager.rs  php_manager.rs  platform.rs  process_manager.rs  service_manager.rs  site_manager.rs  ssl_manager.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/servers/: dump_server.rs  mod.rs  smtp_server.rs
src/components/layout/: Sidebar.tsx
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  Dumps.tsx  Logs.tsx  Mail.tsx  NodeVersions.tsx  PhpVersions.tsx  Services.tsx  Settings.tsx  Sites.tsx
src/stores/: dumps.ts  logs.ts  mail.ts  node.ts  php.ts  services.ts  settings.ts  sites.ts
src/styles/: index.css
