[package]
name = "pherd"
version = "0.1.0"
description = "phpHerd - A Laravel Herd Clone"
authors = ["phpHerd"]
edition = "2021"

[lib]
name = "pherd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rcgen = "0.13"
clap = { version = "4", features = ["derive"] }
tera = "1"
notify = "7"
zip = "2"
flate2 = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
dirs = "6"
sysinfo = "0.33"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tauri-plugin-dialog = "2.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
